finished all the tasks

--- a/Lab_03.ipynb
+++ b/Lab_03.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ea9cac84",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "3c19481c",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "56b86f94",
    "metadata": {},
    "outputs": [
@@ -968,12 +968,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "08736902",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#task 2 _ dropped\n",
+    "#task 2 _ dropped dataste AFTER dropping the unnecessary columns (lab_03_A.csv)\n",
     "# 76% <= 50K => -1\n",
     "# 24% > 50K => 1\n",
     "\n",
@@ -989,12 +989,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "7711ccb0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#task 2 _ cleaned\n",
+    "#task 2 _ cleaned dataset BEFORE dropping of columns (lab_02_A_cleaned.csv)\n",
     "# 76% <= 50K => -1\n",
     "# 24% > 50K => 1\n",
     "\n",
@@ -1010,39 +1010,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "id": "3a319ca1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Params: {'C': 0.01, 'max_iter': 100, 'solver': 'liblinear'}\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "          -1       0.81      0.97      0.88      5573\n",
-      "           1       0.72      0.26      0.38      1753\n",
-      "\n",
-      "    accuracy                           0.80      7326\n",
-      "   macro avg       0.77      0.62      0.63      7326\n",
-      "weighted avg       0.79      0.80      0.76      7326\n",
-      "\n",
-      "Best Params: {'max_depth': 20, 'min_samples_split': 10, 'n_estimators': 100}\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "          -1       0.89      0.95      0.92      5573\n",
-      "           1       0.81      0.61      0.70      1753\n",
-      "\n",
-      "    accuracy                           0.87      7326\n",
-      "   macro avg       0.85      0.78      0.81      7326\n",
-      "weighted avg       0.87      0.87      0.87      7326\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#task 3 _ dropped\n",
+    "#task 3 _ dropped / train the model using the new dataset with the dropped columns\n",
     "#linear regression lr\n",
     "#random forest rf\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -1062,56 +1035,24 @@
     "}\n",
     "\n",
     "\n",
-    "def train(model, param_grid):\n",
-    "    grid = GridSearchCV(model, param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
-    "    grid.fit(X_train_dropped, y_train_dropped)\n",
-    "    best_model = grid.best_estimator_\n",
-    "    y_pred = best_model.predict(X_val_dropped)\n",
-    "    print(f\"Best Params: {grid.best_params_}\")\n",
-    "    print(classification_report(y_val_dropped, y_pred))\n",
-    "    return best_model\n",
-    "\n",
-    "\n",
-    "model_lr = train(LogisticRegression(), param_lr)\n",
-    "\n",
-    "model_rf = train(RandomForestClassifier(), param_rf)"
+    "def train_dropped(model, param_grid):\n",
+    "    grid = GridSearchCV(model, param_grid, cv=5, scoring='accuracy', n_jobs=-1) #try all combinations of the hyperparameters to find the best one\n",
+    "    grid.fit(X_train_dropped, y_train_dropped) #actual training of the model using the training dataset\n",
+    "    best_model = grid.best_estimator_ #picks the best model after trying all combinations\n",
+    "    y_pred = best_model.predict(X_val_dropped) #validates the model (using the validation dataset)\n",
+    "    print(f\"Best Params: {grid.best_params_}\") \n",
+    "    print(classification_report(y_val_dropped, y_pred)) #prints precision, recall, f1-score, accuracy\n",
+    "    return best_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "id": "b310952e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Params: {'C': 0.01, 'max_iter': 100, 'solver': 'liblinear'}\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "          -1       0.81      0.97      0.88      5573\n",
-      "           1       0.72      0.26      0.38      1753\n",
-      "\n",
-      "    accuracy                           0.80      7326\n",
-      "   macro avg       0.77      0.62      0.63      7326\n",
-      "weighted avg       0.79      0.80      0.76      7326\n",
-      "\n",
-      "Best Params: {'max_depth': 20, 'min_samples_split': 10, 'n_estimators': 200}\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "          -1       0.89      0.95      0.92      5573\n",
-      "           1       0.81      0.61      0.70      1753\n",
-      "\n",
-      "    accuracy                           0.87      7326\n",
-      "   macro avg       0.85      0.78      0.81      7326\n",
-      "weighted avg       0.87      0.87      0.87      7326\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#task 3 _ cleaned\n",
+    "#task 3 _ cleaned / train the model using the cleaned dataset before dropping some unnecessary columns\n",
     "#linear regression lr\n",
     "#random forest rf\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -1131,30 +1072,185 @@
     "}\n",
     "\n",
     "\n",
-    "def train(model, param_grid):\n",
+    "def train_cleaned(model, param_grid):\n",
     "    grid = GridSearchCV(model, param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
     "    grid.fit(X_train_cleaned, y_train_cleaned)\n",
     "    best_model = grid.best_estimator_\n",
     "    y_pred = best_model.predict(X_val_cleaned)\n",
     "    print(f\"Best Params: {grid.best_params_}\")\n",
     "    print(classification_report(y_val_cleaned, y_pred))\n",
-    "    return best_model\n",
-    "\n",
-    "\n",
-    "model_lr = train(LogisticRegression(), param_lr)\n",
-    "\n",
-    "model_rf = train(RandomForestClassifier(), param_rf)"
+    "    return best_model"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bd2a21cb",
+   "id": "1b0f1869",
    "metadata": {},
    "source": [
-    "task 3 explanation\n",
+    "**Why did we use these 2 models**\n",
     "\n",
-    "logistic regression was used since we are doing binary classification over the income-num feature\n",
-    "random forest since we have large dataset with high dimensionality and since the class income-num is imbalanced in out data"
+    "logistic regression was used since we are doing binary classification over the income-num feature in a large dataset\n",
+    "random forest since we have large imbalanced dataset with high dimensionality"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "083c800d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression:\n",
+      "Best Params: {'C': 0.01, 'max_iter': 100, 'solver': 'liblinear'}\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -1       0.81      0.97      0.88      5573\n",
+      "           1       0.72      0.26      0.38      1753\n",
+      "\n",
+      "    accuracy                           0.80      7326\n",
+      "   macro avg       0.77      0.62      0.63      7326\n",
+      "weighted avg       0.79      0.80      0.76      7326\n",
+      "\n",
+      "Random Forest:\n",
+      "Best Params: {'max_depth': 20, 'min_samples_split': 10, 'n_estimators': 100}\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -1       0.88      0.96      0.92      5573\n",
+      "           1       0.81      0.60      0.69      1753\n",
+      "\n",
+      "    accuracy                           0.87      7326\n",
+      "   macro avg       0.85      0.78      0.81      7326\n",
+      "weighted avg       0.87      0.87      0.87      7326\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#task 4 _ dropped\n",
+    "print(\"Logistic Regression:\")\n",
+    "model_lr = train_dropped(LogisticRegression(), param_lr)\n",
+    "\n",
+    "print(\"Random Forest:\")\n",
+    "model_rf = train_dropped(RandomForestClassifier(), param_rf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9cc449db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression:\n",
+      "Best Params: {'C': 0.01, 'max_iter': 100, 'solver': 'liblinear'}\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -1       0.81      0.97      0.88      5573\n",
+      "           1       0.72      0.26      0.38      1753\n",
+      "\n",
+      "    accuracy                           0.80      7326\n",
+      "   macro avg       0.77      0.62      0.63      7326\n",
+      "weighted avg       0.79      0.80      0.76      7326\n",
+      "\n",
+      "Random Forest:\n",
+      "Best Params: {'max_depth': 20, 'min_samples_split': 10, 'n_estimators': 200}\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -1       0.89      0.95      0.92      5573\n",
+      "           1       0.80      0.61      0.69      1753\n",
+      "\n",
+      "    accuracy                           0.87      7326\n",
+      "   macro avg       0.85      0.78      0.81      7326\n",
+      "weighted avg       0.87      0.87      0.86      7326\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#task 4 _ cleaned\n",
+    "print(\"Logistic Regression:\")\n",
+    "model_lr = train_cleaned(LogisticRegression(), param_lr)\n",
+    "\n",
+    "print(\"Random Forest:\")\n",
+    "model_rf = train_cleaned(RandomForestClassifier(), param_rf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2249a6f4",
+   "metadata": {},
+   "source": [
+    "**Task 5:**\n",
+    "\n",
+    "\n",
+    "After viewing the results we can clearly see that the models gave the exact output even when trained on 2 different datasets.\n",
+    "\n",
+    "This means that the columns that we dropped were just REDUNDANT columns and dropping them didn't make us lose any information. (model got the necessary signals from the columns we didn't drop and the columns that we dropped where just repetition of data).\n",
+    "\n",
+    "The performance of both models was the same across the full-feature and feature-selected datasets. This means that the dropped features were not contributing unique value to the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac554d5f",
+   "metadata": {},
+   "source": [
+    "**Task 6:**\n",
+    "\n",
+    "1- performance didn't change\n",
+    "\n",
+    "2- on my laptop (using 32 logical cores on the cpu):\n",
+    "\n",
+    "        the cleaned dataset (BEFORE DROPPNG) took 27.3 seconds to execute\n",
+    "        the dropped dataset (AFTER DROPPING) took 24.7 seconds to execute\n",
+    "\n",
+    "Therefore, we can conclude that feature selection (dropping of columns):\n",
+    "    - improved model simplicity by reducing unnecessary freatures\n",
+    "    - had no negative impact on performance\n",
+    "    - made the training faster (3 seconds difference on 32 cores will become 24 seconds difference on an older cpu with 4 cores)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9152707",
+   "metadata": {},
+   "source": [
+    "**Task 7:**\n",
+    "\n",
+    "LOGISTIC REGRESSION: {'C': 0.01, 'max_iter': 100, 'solver': 'liblinear'}\n",
+    "\n",
+    "   - very high recall and precision in predicting class of -1 (<=50K) => this class is the majority in the dataset\n",
+    "   - high precision but low recall in predicting class of 1 (>50K) => this class is the minority in the dataset\n",
+    "\n",
+    "    Conc: This model is facing issues when dealing with imbalanced dataset \n",
+    "\n",
+    "RANDOM FOREST: {'max_depth': 20, 'min_samples_split': 10, 'n_estimators': 200}\n",
+    "\n",
+    "   - very high recall and precision in predicting class of -1 (<=50K) => this class is the majority in the dataset\n",
+    "   - high recall and precision in predicting class of 1 (>50K) => this class is the minority in the dataset\n",
+    "\n",
+    "    Conc: This model is more balanced and powerful in handling nonlinear patterns since it is performing way better than logistic regression in all metrics in this imbalanced dataset.\n",
+    "\n",
+    "CONCLUSION:\n",
+    "   - Random Forest clearly outperforms Logistic Regression on all metrics (accuracy, f1-score, precision, recall)\n",
+    "   - Class imbalance is a problem for Logistic Regression while Random Forest can properly handle it\n",
+    "   - NOTE:\n",
+    "        - While training Logistic Regression was way faster almost three times the speed of Random Forest\n",
+    "            - in the dropped dataset, LR took 6-7 seconds while RF took 17-18 seconds\n",
+    "        - So we can say that Logistic Regression is fast while Random Forest is more powerful\n",
+    "\n",
+    "Therefore\n",
+    "   - Random Forest was the better model since it has the highest accuracy and f1-score with a low cost of training\n",
+    "   - Feature-selected  dataset (dropped dataset / lab_03_A.csv) was the better dataset to use since it is simpler, cleaner, and performed identically to the cleaned dataset with extra unnecessary columns. \n",
+    "    \n",
+    "    "
    ]
   }
  ],
