fixed some typos in tasks 5,6,7

--- a/Lab_03.ipynb
+++ b/Lab_03.ipynb
@@ -1191,7 +1191,7 @@
     "\n",
     "After viewing the results we can clearly see that the models gave the exact output even when trained on 2 different datasets.\n",
     "\n",
-    "This means that the columns that we dropped were just REDUNDANT columns and dropping them didn't make us lose any information. (model got the necessary signals from the columns we didn't drop and the columns that we dropped where just repetition of data).\n",
+    "This means that the columns that we dropped were just REDUNDANT columns and dropping them didn't make us lose any information. (model got the necessary information from the columns that we didn't drop and the columns that we dropped where just repetition of data).\n",
     "\n",
     "The performance of both models was the same across the full-feature and feature-selected datasets. This means that the dropped features were not contributing unique value to the model."
    ]
@@ -1211,9 +1211,9 @@
     "        the dropped dataset (AFTER DROPPING) took 24.7 seconds to execute\n",
     "\n",
     "Therefore, we can conclude that feature selection (dropping of columns):\n",
-    "    - improved model simplicity by reducing unnecessary freatures\n",
-    "    - had no negative impact on performance\n",
-    "    - made the training faster (3 seconds difference on 32 cores will become 24 seconds difference on an older cpu with 4 cores)\n",
+    "   - improved model simplicity by dropping unnecessary freatures\n",
+    "   - had no negative impact on performance\n",
+    "   - made the training faster (3 seconds difference on 32 cores will become 24 seconds difference on an older cpu with 4 cores)\n",
     "    "
    ]
   },
@@ -1227,7 +1227,9 @@
     "LOGISTIC REGRESSION: {'C': 0.01, 'max_iter': 100, 'solver': 'liblinear'}\n",
     "\n",
     "   - very high recall and precision in predicting class of -1 (<=50K) => this class is the majority in the dataset\n",
-    "   - high precision but low recall in predicting class of 1 (>50K) => this class is the minority in the dataset\n",
+    "   - good precision but low recall in predicting class of 1 (>50K) => this class is the minority in the dataset\n",
+    "      - out of all predicted to be positive most of them were correct\n",
+    "      - but, out of all actual positives the model missed 74%\n",
     "\n",
     "    Conc: This model is facing issues when dealing with imbalanced dataset \n",
     "\n",
@@ -1235,20 +1237,21 @@
     "\n",
     "   - very high recall and precision in predicting class of -1 (<=50K) => this class is the majority in the dataset\n",
     "   - high recall and precision in predicting class of 1 (>50K) => this class is the minority in the dataset\n",
+    "      - the model missed 39% of the positives in class 1 but it is still better than the Logistic Regression that missed 74%\n",
     "\n",
-    "    Conc: This model is more balanced and powerful in handling nonlinear patterns since it is performing way better than logistic regression in all metrics in this imbalanced dataset.\n",
+    "    Conc: This model is more balanced and powerful in handling imbalanced and nonlinear datasets since it is performing way better than logistic regression in all metrics in this imbalanced dataset.\n",
     "\n",
     "CONCLUSION:\n",
-    "   - Random Forest clearly outperforms Logistic Regression on all metrics (accuracy, f1-score, precision, recall)\n",
+    "   - Random Forest clearly outperforms Logistic Regression in all metrics (accuracy, f1-score, precision, recall)\n",
     "   - Class imbalance is a problem for Logistic Regression while Random Forest can properly handle it\n",
     "   - NOTE:\n",
-    "        - While training Logistic Regression was way faster almost three times the speed of Random Forest\n",
+    "        - Training on Logistic Regression was way faster almost three times the speed of Random Forest\n",
     "            - in the dropped dataset, LR took 6-7 seconds while RF took 17-18 seconds\n",
-    "        - So we can say that Logistic Regression is fast while Random Forest is more powerful\n",
+    "        - So we can say that Logistic Regression is faster while Random Forest is more powerful\n",
     "\n",
     "Therefore\n",
-    "   - Random Forest was the better model since it has the highest accuracy and f1-score with a low cost of training\n",
-    "   - Feature-selected  dataset (dropped dataset / lab_03_A.csv) was the better dataset to use since it is simpler, cleaner, and performed identically to the cleaned dataset with extra unnecessary columns. \n",
+    "   - Random Forest was the better model since it has the highest accuracy and f1-score with a low cost of training (trained in seconds and on a laptop's CPU)\n",
+    "   - Feature-selected  dataset (dropped dataset / lab_03_A.csv) was the better dataset to use since it is simpler, cleaner, and performed identically to the cleaned dataset with extra unnecessary/redundant columns. \n",
     "    \n",
     "    "
    ]
