added task 5 and moved modified csv

--- a/Lab_04.ipynb
+++ b/Lab_04.ipynb
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "14199a10",
    "metadata": {},
    "outputs": [
@@ -1411,18 +1411,19 @@
     "\n",
     "modified_names = []\n",
     "\n",
+    "new_paths = []\n",
+    "\n",
     "for i, row in df.iterrows():\n",
     "    class_id = row['class_id']\n",
     "    dest_dir = Path(class_dirs[class_id])\n",
     "\n",
-    "    # Generate the new filename based on per-class counter\n",
     "    img_index = class_counters[class_id]\n",
     "    new_name = f\"img_{img_index}.jpg\"\n",
     "    modified_names.append(new_name)\n",
     "\n",
-    "    # Build full source and destination paths\n",
     "    src_path = Path(row['image_path'])\n",
     "    dest_path = dest_dir / new_name\n",
+    "    new_paths.append(str(dest_path))\n",
     "\n",
     "    # Copy the image\n",
     "    try:\n",
@@ -1431,11 +1432,278 @@
     "    except FileNotFoundError:\n",
     "        print(f\"File not found: {src_path}\")\n",
     "\n",
-    "    class_counters[class_id] += 1\n",
-    "\n",
+    "    class_counters[class_id] += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "37f2b636",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 799 entries, 0 to 798\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   image_path         799 non-null    object \n",
+      " 1   original_filename  799 non-null    object \n",
+      " 2   class_id           799 non-null    int64  \n",
+      " 3   x_center           799 non-null    float64\n",
+      " 4   y_center           799 non-null    float64\n",
+      " 5   width              799 non-null    float64\n",
+      " 6   height             799 non-null    float64\n",
+      " 7   modified_name      799 non-null    object \n",
+      " 8   new_path           799 non-null    object \n",
+      "dtypes: float64(4), int64(1), object(4)\n",
+      "memory usage: 56.3+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_path</th>\n",
+       "      <th>original_filename</th>\n",
+       "      <th>class_id</th>\n",
+       "      <th>x_center</th>\n",
+       "      <th>y_center</th>\n",
+       "      <th>width</th>\n",
+       "      <th>height</th>\n",
+       "      <th>modified_name</th>\n",
+       "      <th>new_path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>banana_dataset\\train\\images\\musa-acuminata-ove...</td>\n",
+       "      <td>musa-acuminata-overripe-9d459010-1d0a-11ec-89c...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.498958</td>\n",
+       "      <td>0.623611</td>\n",
+       "      <td>0.997917</td>\n",
+       "      <td>0.652778</td>\n",
+       "      <td>img_0.jpg</td>\n",
+       "      <td>processed_images\\class_0\\img_0.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>banana_dataset\\train\\images\\musa-acuminata-ove...</td>\n",
+       "      <td>musa-acuminata-overripe-9d6229db-1d0a-11ec-90a...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.502083</td>\n",
+       "      <td>0.581944</td>\n",
+       "      <td>0.895833</td>\n",
+       "      <td>0.558333</td>\n",
+       "      <td>img_1.jpg</td>\n",
+       "      <td>processed_images\\class_0\\img_1.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>banana_dataset\\train\\images\\musa-acuminata-ove...</td>\n",
+       "      <td>musa-acuminata-overripe-9d648d3b-1d0a-11ec-838...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.495833</td>\n",
+       "      <td>0.409722</td>\n",
+       "      <td>0.895833</td>\n",
+       "      <td>0.563889</td>\n",
+       "      <td>img_2.jpg</td>\n",
+       "      <td>processed_images\\class_0\\img_2.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>banana_dataset\\train\\images\\musa-acuminata-ove...</td>\n",
+       "      <td>musa-acuminata-overripe-9d9b5da1-1d0a-11ec-a47...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.498958</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.997917</td>\n",
+       "      <td>0.611111</td>\n",
+       "      <td>img_3.jpg</td>\n",
+       "      <td>processed_images\\class_0\\img_3.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>banana_dataset\\train\\images\\musa-acuminata-ove...</td>\n",
+       "      <td>musa-acuminata-overripe-9dac0cb7-1d0a-11ec-83d...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.498958</td>\n",
+       "      <td>0.479167</td>\n",
+       "      <td>0.997917</td>\n",
+       "      <td>0.958333</td>\n",
+       "      <td>img_4.jpg</td>\n",
+       "      <td>processed_images\\class_0\\img_4.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>794</th>\n",
+       "      <td>banana_dataset\\test\\images\\musa-acuminata-over...</td>\n",
+       "      <td>musa-acuminata-overripe-a00bd29a-1d0a-11ec-b8c...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.498958</td>\n",
+       "      <td>0.423611</td>\n",
+       "      <td>0.997917</td>\n",
+       "      <td>0.558333</td>\n",
+       "      <td>img_195.jpg</td>\n",
+       "      <td>processed_images\\class_0\\img_195.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>795</th>\n",
+       "      <td>banana_dataset\\test\\images\\musa-acuminata-over...</td>\n",
+       "      <td>musa-acuminata-overripe-a01c81c2-1d0a-11ec-96d...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.536458</td>\n",
+       "      <td>0.541667</td>\n",
+       "      <td>0.906250</td>\n",
+       "      <td>0.761111</td>\n",
+       "      <td>img_196.jpg</td>\n",
+       "      <td>processed_images\\class_0\\img_196.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>796</th>\n",
+       "      <td>banana_dataset\\test\\images\\musa-acuminata-over...</td>\n",
+       "      <td>musa-acuminata-overripe-a0260a6b-1d0a-11ec-888...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.498958</td>\n",
+       "      <td>0.427778</td>\n",
+       "      <td>0.997917</td>\n",
+       "      <td>0.855556</td>\n",
+       "      <td>img_197.jpg</td>\n",
+       "      <td>processed_images\\class_0\\img_197.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>797</th>\n",
+       "      <td>banana_dataset\\test\\images\\musa-acuminata-over...</td>\n",
+       "      <td>musa-acuminata-overripe-a04e8f14-1d0a-11ec-a09...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.415625</td>\n",
+       "      <td>0.498611</td>\n",
+       "      <td>0.493750</td>\n",
+       "      <td>0.997222</td>\n",
+       "      <td>img_198.jpg</td>\n",
+       "      <td>processed_images\\class_0\\img_198.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>798</th>\n",
+       "      <td>banana_dataset\\test\\images\\musa-acuminata-over...</td>\n",
+       "      <td>musa-acuminata-overripe-a1c4c199-1d0a-11ec-a5c...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.481250</td>\n",
+       "      <td>0.462500</td>\n",
+       "      <td>0.887500</td>\n",
+       "      <td>0.480556</td>\n",
+       "      <td>img_199.jpg</td>\n",
+       "      <td>processed_images\\class_0\\img_199.jpg</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>799 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            image_path  \\\n",
+       "0    banana_dataset\\train\\images\\musa-acuminata-ove...   \n",
+       "1    banana_dataset\\train\\images\\musa-acuminata-ove...   \n",
+       "2    banana_dataset\\train\\images\\musa-acuminata-ove...   \n",
+       "3    banana_dataset\\train\\images\\musa-acuminata-ove...   \n",
+       "4    banana_dataset\\train\\images\\musa-acuminata-ove...   \n",
+       "..                                                 ...   \n",
+       "794  banana_dataset\\test\\images\\musa-acuminata-over...   \n",
+       "795  banana_dataset\\test\\images\\musa-acuminata-over...   \n",
+       "796  banana_dataset\\test\\images\\musa-acuminata-over...   \n",
+       "797  banana_dataset\\test\\images\\musa-acuminata-over...   \n",
+       "798  banana_dataset\\test\\images\\musa-acuminata-over...   \n",
+       "\n",
+       "                                     original_filename  class_id  x_center  \\\n",
+       "0    musa-acuminata-overripe-9d459010-1d0a-11ec-89c...         0  0.498958   \n",
+       "1    musa-acuminata-overripe-9d6229db-1d0a-11ec-90a...         0  0.502083   \n",
+       "2    musa-acuminata-overripe-9d648d3b-1d0a-11ec-838...         0  0.495833   \n",
+       "3    musa-acuminata-overripe-9d9b5da1-1d0a-11ec-a47...         0  0.498958   \n",
+       "4    musa-acuminata-overripe-9dac0cb7-1d0a-11ec-83d...         0  0.498958   \n",
+       "..                                                 ...       ...       ...   \n",
+       "794  musa-acuminata-overripe-a00bd29a-1d0a-11ec-b8c...         0  0.498958   \n",
+       "795  musa-acuminata-overripe-a01c81c2-1d0a-11ec-96d...         0  0.536458   \n",
+       "796  musa-acuminata-overripe-a0260a6b-1d0a-11ec-888...         0  0.498958   \n",
+       "797  musa-acuminata-overripe-a04e8f14-1d0a-11ec-a09...         0  0.415625   \n",
+       "798  musa-acuminata-overripe-a1c4c199-1d0a-11ec-a5c...         0  0.481250   \n",
+       "\n",
+       "     y_center     width    height modified_name  \\\n",
+       "0    0.623611  0.997917  0.652778     img_0.jpg   \n",
+       "1    0.581944  0.895833  0.558333     img_1.jpg   \n",
+       "2    0.409722  0.895833  0.563889     img_2.jpg   \n",
+       "3    0.500000  0.997917  0.611111     img_3.jpg   \n",
+       "4    0.479167  0.997917  0.958333     img_4.jpg   \n",
+       "..        ...       ...       ...           ...   \n",
+       "794  0.423611  0.997917  0.558333   img_195.jpg   \n",
+       "795  0.541667  0.906250  0.761111   img_196.jpg   \n",
+       "796  0.427778  0.997917  0.855556   img_197.jpg   \n",
+       "797  0.498611  0.493750  0.997222   img_198.jpg   \n",
+       "798  0.462500  0.887500  0.480556   img_199.jpg   \n",
+       "\n",
+       "                                 new_path  \n",
+       "0      processed_images\\class_0\\img_0.jpg  \n",
+       "1      processed_images\\class_0\\img_1.jpg  \n",
+       "2      processed_images\\class_0\\img_2.jpg  \n",
+       "3      processed_images\\class_0\\img_3.jpg  \n",
+       "4      processed_images\\class_0\\img_4.jpg  \n",
+       "..                                    ...  \n",
+       "794  processed_images\\class_0\\img_195.jpg  \n",
+       "795  processed_images\\class_0\\img_196.jpg  \n",
+       "796  processed_images\\class_0\\img_197.jpg  \n",
+       "797  processed_images\\class_0\\img_198.jpg  \n",
+       "798  processed_images\\class_0\\img_199.jpg  \n",
+       "\n",
+       "[799 rows x 9 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#task 5\n",
     "df['modified_name'] = modified_names\n",
+    "df['new_path'] = new_paths\n",
     "\n",
-    "df.to_csv(\"lab_04_A_with_modified_names.csv\", index=False)\n"
+    "df.to_csv(\"data\\lab_04_A_with_modified_names.csv\", index=False)\n",
+    "\n",
+    "\n",
+    "dfNew = pd.read_csv(\"data\\lab_04_A_with_modified_names.csv\")\n",
+    "dfNew.info()\n",
+    "display(dfNew)"
    ]
   }
  ],
