fixed lab 4 classes

--- a/Lab_06.ipynb
+++ b/Lab_06.ipynb
@@ -316,7 +316,29 @@
    "id": "1b7fefcc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#task 1 and 3 done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "005920ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44a1198f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#task 2\n"
+   ]
   }
  ],
  "metadata": {
