--- a/Lab_06.ipynb
+++ b/Lab_06.ipynb
@@ -322,23 +322,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "005920ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#libraries"
+    "#libraries\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers, models\n",
+    "import os\n",
+    "import shutil\n",
+    "from glob import glob\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "730adafe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done splitting and copying images!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#task 2.1\n",
+    "\n",
+    "# Set up paths\n",
+    "src_dir = 'processed_images'\n",
+    "dst_root = 'dataLab6'\n",
+    "splits = ['train', 'test', 'valid']\n",
+    "split_ratio = [0.7, 0.15, 0.15]\n",
+    "\n",
+    "os.makedirs(dst_root, exist_ok=True)\n",
+    "\n",
+    "for class_name in sorted(os.listdir(src_dir)):\n",
+    "    class_path = os.path.join(src_dir, class_name)\n",
+    "    if not os.path.isdir(class_path):\n",
+    "        continue\n",
+    "\n",
+    "    images = sorted(glob(os.path.join(class_path, '*')))\n",
+    "    total = len(images)\n",
+    "    n_train = int(total * split_ratio[0])\n",
+    "    n_test = int(total * split_ratio[1])\n",
+    "    n_valid = total - n_train - n_test\n",
+    "\n",
+    "\n",
+    "    train_images = images[:n_train]\n",
+    "    test_images = images[n_train:n_train + n_test]\n",
+    "    valid_images = images[n_train + n_test:]\n",
+    "\n",
+    "    split_images = [train_images, test_images, valid_images]\n",
+    "\n",
+    "    for split, imgs in zip(splits, split_images):\n",
+    "        split_class_dir = os.path.join(dst_root, split, class_name)\n",
+    "        os.makedirs(split_class_dir, exist_ok=True)\n",
+    "        for img_path in imgs:\n",
+    "            shutil.copy(img_path, split_class_dir)\n",
+    "\n",
+    "print(\"Done splitting and copying images!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "44a1198f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 558 files belonging to 5 classes.\n",
+      "Found 122 files belonging to 5 classes.\n",
+      "Found 119 files belonging to 5 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#task 2.2\n",
+    "\n",
+    "BATCH_SIZE = 32\n",
+    "IMG_SIZE = (224, 224)\n",
+    "SEED = 42\n",
+    "\n",
+    "train_data = tf.keras.preprocessing.image_dataset_from_directory(\n",
+    "    'dataLab6/train',\n",
+    "    image_size=IMG_SIZE,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    label_mode='categorical',  # For multi-class classification\n",
+    "    shuffle=True,\n",
+    "    seed=SEED\n",
+    ")\n",
+    "\n",
+    "val_data = tf.keras.preprocessing.image_dataset_from_directory(\n",
+    "    'dataLab6/valid',\n",
+    "    image_size=IMG_SIZE,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    label_mode='categorical',\n",
+    "    shuffle=True\n",
+    ")\n",
+    "\n",
+    "test_data = tf.keras.preprocessing.image_dataset_from_directory(\n",
+    "    'dataLab6/test',\n",
+    "    image_size=IMG_SIZE,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    label_mode='categorical',\n",
+    "    shuffle=True\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44a1198f",
+   "id": "3246f4e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#task 2\n"
+    "#task 4\n",
+    "\n",
+    "\n",
+    "#feature extraction block\n",
+    "\n",
+    "model = models.Sequential()\n",
+    "model.add(layers.Rescaling(1./255, input_shape=(224, 224, 3)))  # Normalization layer\n",
+    "\n",
+    "model.add(layers.Conv2D(32, (3,3), activation='relu'))\n",
+    "model.add(layers.BatchNormalization())\n",
+    "model.add(layers.MaxPooling2D(2,2))\n",
+    "model.add(layers.Dropout(0.25))\n",
+    "\n",
+    "model.add(layers.Conv2D(64, (3,3), activation='relu'))\n",
+    "model.add(layers.BatchNormalization())\n",
+    "model.add(layers.MaxPooling2D(2,2))\n",
+    "model.add(layers.Dropout(0.25))\n",
+    "\n",
+    "#classification block\n",
+    "\n",
+    "model.add(layers.Flatten())\n",
+    "model.add(layers.Dense(128, activation='relu'))\n",
+    "model.add(layers.Dropout(0.5))\n",
+    "# model.add(layers.Dense(train_data.cardinality().num   py(), activation='softmax'))\n",
+    "model.add(layers.Dense(5, activation='softmax'))\n",
+    "\n",
+    "\n",
+    "model.compile(\n",
+    "    optimizer='adam',\n",
+    "    loss='categorical_crossentropy',\n",
+    "    metrics=['accuracy']\n",
+    ")\n",
+    "\n",
+    "history = model.fit(\n",
+    "    train_data,\n",
+    "    validation_data=val_data,\n",
+    "    epochs=20\n",
+    ")\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23cdcf6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b29f7789",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -348,7 +509,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.16"
   }
  },
