fixed library initialization and requirements.txt file

--- a/Lab_01.ipynb
+++ b/Lab_01.ipynb
@@ -128,6 +128,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b89e0428",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "id": "708a640d-df49-489b-b664-a51554c5d9be",
    "metadata": {},
@@ -310,8 +322,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "# Define a DataFrame\n",
     "data = {\n",
     "    \"Name\": [\"Alice\", \"Bob\", \"Charlie\"],\n",
@@ -359,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "3b9ef7fb-7ee0-4bc3-8831-328b00f7fe61",
    "metadata": {},
    "outputs": [
@@ -384,7 +394,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "\n",
     "# Define an array\n",
     "myarray = np.array([[1, 2, 3], [4, 5, 6]], np.int32)\n",
@@ -411,8 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "image_size = (5, 5, 3) \n",
     "colored_image = np.random.randint(0, 256, image_size, dtype=np.uint8)\n",
@@ -446,9 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
+    "\n",
     "\n",
     "np.random.seed(42)  \n",
     "time_points = pd.date_range(start=\"2022-01-01\", periods=10, freq=\"D\")  \n",
@@ -489,7 +495,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "\n",
     "help(pd.DataFrame.head)"
    ]
   },
@@ -974,7 +980,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "\n",
     "csv = pd.read_csv(\"data\\lab_01_A.csv\")\n",
     "display(csv)"
    ]
@@ -1284,9 +1290,7 @@
    "id": "1d421e7e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Data insight, Task 5"
-   ]
+   "source": []
   }
  ],
  "metadata": {
