--- a/Lab_03.ipynb
+++ b/Lab_03.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "ea9cac84",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,10 @@
     "\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n"
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n"
    ]
   },
   {
@@ -1010,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "3a319ca1",
    "metadata": {},
    "outputs": [],
@@ -1018,8 +1021,6 @@
     "#task 3 _ dropped / train the model using the new dataset with the dropped columns\n",
     "#linear regression lr\n",
     "#random forest rf\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "# Hyperparameter grids from chatgpt\n",
     "param_lr = {\n",
@@ -1047,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "b310952e",
    "metadata": {},
    "outputs": [],
@@ -1055,8 +1056,6 @@
     "#task 3 _ cleaned / train the model using the cleaned dataset before dropping some unnecessary columns\n",
     "#linear regression lr\n",
     "#random forest rf\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "# Hyperparameter grids from chatgpt\n",
     "param_lr = {\n",
